WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250741
Fix duplicate timeupdate events
https://bugs.webkit.org/show_bug.cgi?id=250741
Summary
Fix duplicate timeupdate events
Ahmad Saleem
Reported
2023-01-17 17:23:26 PST
Hi Team, While going through Blink's commit, I came across another potential merge but it does not have testcase because it can be flaky due to timing oriented nature of tests. Blink Commit -
https://chromium.googlesource.com/chromium/blink/+/fd62a2259d085146f7fb275f99edb80e0e80243b
WebKit Code -
https://searchfox.org/wubkat/source/Source/WebCore/html/HTMLMediaElement.cpp#1776
Just wanted to raise to get input and whether we can fix it without any test case. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2023-01-17 17:34:06 PST
***
Bug 250548
has been marked as a duplicate of this bug. ***
Ahmad Saleem
Comment 2
2023-01-17 17:48:44 PST
https://github.com/WebKit/WebKit/pull/8745
EWS
Comment 3
2023-01-18 04:22:57 PST
Committed
259023@main
(afdf40ad5538): <
https://commits.webkit.org/259023@main
> Reviewed commits have been landed. Closing PR #8745 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2023-01-18 04:23:17 PST
<
rdar://problem/104374588
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug