Fix duplicate timeupdate events in Text Track Code

Fix duplicate timeupdate events in Text Track Code
https://bugs.webkit.org/show_bug.cgi?id=250741

Reviewed by Eric Carlson.

Merge - https://chromium.googlesource.com/chromium/blink/+/fd62a2259d085146f7fb275f99edb80e0e80243b

This change prevents duplicate timeupdate events caused by the text
track code. The comment above the call indicates that the timeupdate
event should have the same restrictions as the normal periodic
timeupdate event. By changing the parameter passed to
scheduleTimeupdateEvent() to true, the event rate limiting guards
are properly applied to this call and duplicate events won't
fire.

* Source/WebCore/html/HTMLMediaElement.cpp:
(HTMLMediaElement::updateActiveTextTrackCues): Update 'scheduleTimeUpdateEvent' to 'true' to have event rate limit

Canonical link: https://commits.webkit.org/259023@main